--- a/XamJam.Screen/Plugin.XamJam.Screen.nuspec
+++ b/XamJam.Screen/Plugin.XamJam.Screen.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata minClientVersion="2.8.1">
     <id>Xam.Plugins.XamJam.Screen</id>
-    <version>1.0.2-beta</version>
+    <version>1.0.3-beta</version>
     <title>Screen Size Plugin for Android, iOS, UWP, WP8, WP81, Windows Store 81</title>
     <authors>Jason C. HandUber</authors>
     <owners>Jason C. HandUber</owners>
@@ -24,109 +24,71 @@
       - Minor code and documentation cleanup.
       [1.0.2-beta]
       - Testing on iOS didn't go as predicted. Trying again...
+      [1.0.3-beta]
+      - Fixed the iOS nuspec, the template had me going to classic and using the old "Unified" directory structure. Will test this new nuspec.
+      - Added 'ScreenSize.IsMaximum' since UWP apps don't provide a way to determine max screen size (since they can run with multiple monitors, change their resolution, etc.)
     </releaseNotes>
   </metadata>
   <files>
     <!--Core-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.XamJam.Screen.pdb" />
 
     <!--Xamarin.Android-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\MonoAndroid10\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.dll" target="lib\MonoAndroid10\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.xml" target="lib\MonoAndroid10\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen.Android\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\MonoAndroid10\Plugin.XamJam.Screen.pdb" />
 
-    <!--Xamarin.iOS-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.dll"
-          target="lib\MonoTouch10\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.xml"
-          target="lib\MonoTouch10\Plugin.XamJam.Screen.xml" />
+    <!--Xamarin.iOS Classic (old/deprecated MonoTouch10 target)-->
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\MonoTouch10\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.dll" target="lib\MonoTouch10\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.xml" target="lib\MonoTouch10\Plugin.XamJam.Screen.xml" />
 
-    <!--Xamarin.iOS Unified
+    <!--Xamarin.iOS Unified (new hotness - x64, Xamarin.iOS10 target-->
      <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractions.dll" />
      <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.Abstractions.xml" />
-     <file src="Plugin.XamJam.Screen.iOSUnified\bin\iPhone\Release\Plugin.XamJam.Screen.dll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.dll" />
-     <file src="Plugin.XamJam.Screen.iOSUnified\bin\iPhone\Release\Plugin.XamJam.Screen.xml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.xml" />
-	 -->
+     <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.dll" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.dll" />
+     <file src="Plugin.XamJam.Screen.iOS\bin\iPhone\Release\Plugin.XamJam.Screen.xml" target="lib\Xamarin.iOS10\Plugin.XamJam.Screen.xml" />
 
     <!--Win Store-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\UAP10\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\UAP10\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\UAP10\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\UAP10\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.dll" target="lib\UAP10\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.xml" target="lib\UAP10\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen.UWP\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\UAP10\Plugin.XamJam.Screen.pdb" />
 
     <!--Win Phone 8.0 -->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\wp8\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\wp8\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\wp8\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\wp8\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\wp8\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\wp8\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wp8\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wp8\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wp8\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone8\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wp8\Plugin.XamJam.Screen.pdb" />
 
     <!--Win Phone RT / Windows Phone 8.1-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\wpa81\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\wpa81\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\wpa81\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\wpa81\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.dll" target="lib\wpa81\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.xml" target="lib\wpa81\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen.WindowsPhone81\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\wpa81\Plugin.XamJam.Screen.pdb" />
 
     <!--Win Store-->
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll"
-          target="lib\win8\Plugin.XamJam.Screen.Abstractions.dll" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\win8\Plugin.XamJam.Screen.Abstractions.xml" />
-    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml"
-          target="lib\win8\Plugin.XamJam.Screen.Abstractions.pdb" />
-    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.dll"
-          target="lib\win8\Plugin.XamJam.Screen.dll" />
-    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.xml"
-          target="lib\win8\Plugin.XamJam.Screen.xml" />
-    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.pdb"
-          target="lib\win8\Plugin.XamJam.Screen.pdb" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.dll" target="lib\win8\Plugin.XamJam.Screen.Abstractions.dll" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\win8\Plugin.XamJam.Screen.Abstractions.xml" />
+    <file src="Plugin.XamJam.Screen.Abstractions\bin\Release\Plugin.XamJam.Screen.Abstractions.xml" target="lib\win8\Plugin.XamJam.Screen.Abstractions.pdb" />
+    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.dll" target="lib\win8\Plugin.XamJam.Screen.dll" />
+    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.xml" target="lib\win8\Plugin.XamJam.Screen.xml" />
+    <file src="Plugin.XamJam.Screen.WindowsStore\bin\Release\Plugin.XamJam.Screen.pdb" target="lib\win8\Plugin.XamJam.Screen.pdb" />
 
   </files>
 </package>
