just want to test and make sure the commit is working

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,4 @@ ModelManifest.xml
 /XamJam.Screen/cycleRemote.bat
 /XamJam.BugHound/cycleRemote.bat
 /XamJam.BugHound/cycleLocal.bat
+/git-add-dir.bat
