--- a/XamJam.Nav/XamJam.Nav.csproj
+++ b/XamJam.Nav/XamJam.Nav.csproj
@@ -76,9 +76,19 @@
       <HintPath>packages\Xamarin.Forms.2.2.0.31\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="XamSvg.Shared, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Vapolia.XamSvg.Forms.2.0.32\lib\portable-win8+net45+wp8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\XamSvg.Shared.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="XamSvg.XamForms, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Vapolia.XamSvg.Forms.2.0.32\lib\portable-win8+net45+wp8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\XamSvg.XamForms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
