--- a/XamJam.Ratings/XamJam.RatingsSample.Droid/packages.config
+++ b/XamJam.Ratings/XamJam.RatingsSample.Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MR.Gestures" version="1.3.2" targetFramework="monoandroid60" />
+  <package id="Softlion.XamSvg" version="2.0.32" targetFramework="monoandroid60" />
+  <package id="Vapolia.XamSvg.Forms" version="2.0.32" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
