--- a/XamJam.Ratings/XamJam.RatingsSample.UWP/project.json
+++ b/XamJam.Ratings/XamJam.RatingsSample.UWP/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "MR.Gestures": "1.3.2",
+    "Softlion.XamSvg": "2.0.32",
+    "Vapolia.XamSvg.Forms": "2.0.32",
     "Xamarin.Forms": "2.2.0.31"
   },
   "frameworks": {
