--- a/XamJam.Ratings/XamJam.RatingsSample/packages.config
+++ b/XamJam.Ratings/XamJam.RatingsSample/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.51.0" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="Softlion.XamSvg" version="2.0.32" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Vapolia.XamSvg.Forms" version="2.0.32" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
