--- a/XamJam.Nav/XamJam.Nav.csproj
+++ b/XamJam.Nav/XamJam.Nav.csproj
@@ -89,6 +89,10 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Plugin.XamJam.Util.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
