Getting much closer to a reasonable implementation of XamJam.Pic. The PicManager is the only thing that's currently platform dependent.

--- a/XamJam.Pic/Plugin.XamJam.Pic.Abstractions/Plugin.XamJam.Pic.Abstractions.csproj
+++ b/XamJam.Pic/Plugin.XamJam.Pic.Abstractions/Plugin.XamJam.Pic.Abstractions.csproj
@@ -37,7 +37,8 @@
     <DocumentationFile>bin\Release\Plugin.XamJam.Pic.Abstractions.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IXamJam.Pic.cs" />
+    <Compile Include="IPic.cs" />
+    <Compile Include="IPicManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
