--- a/XamJam.Pic/Plugin.XamJam.Pic/packages.config
+++ b/XamJam.Pic/Plugin.XamJam.Pic/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Xamarin.FFImageLoading" version="2.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.2.0.43" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
