battling yellow triangles, again. Fresh start.

--- a/XamJam.Ratings/XamJam.Ratings/XamJam.Ratings.csproj
+++ b/XamJam.Ratings/XamJam.Ratings/XamJam.Ratings.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Plugin.XamJam.Ratings.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="RatingView.xaml">
