--- a/XamJam.UtilOriginal/packages.config
+++ b/XamJam.UtilOriginal/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="Xam.Plugins.XamJam.BugHound" version="0.0.1-alpha" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
