--- a/XamJam.Pic/Plugin.XamJam.Pic.WindowsPhone81/Plugin.XamJam.Pic.WindowsPhone81.csproj
+++ b/XamJam.Pic/Plugin.XamJam.Pic.WindowsPhone81/Plugin.XamJam.Pic.WindowsPhone81.csproj
@@ -81,12 +81,20 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <ProjectReference Include="..\Plugin.XamJam.Pic.Abstractions\Plugin.XamJam.Pic.Abstractions.csproj">
+    <ProjectReference Include="..\..\XamJam.Screen\Plugin.XamJam.Screen.Abstractions\Plugin.XamJam.Screen.Abstractions.csproj">
       <Project>{6edb0588-ffc5-4ef5-8a99-9e241d0f878d}</Project>
+      <Name>Plugin.XamJam.Screen.Abstractions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\XamJam.Screen\Plugin.XamJam.Screen\Plugin.XamJam.Screen.csproj">
+      <Project>{A6FCEF44-D2BA-42C7-B3CB-13667BCD7B54}</Project>
+      <Name>Plugin.XamJam.Screen</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Plugin.XamJam.Pic.Abstractions\Plugin.XamJam.Pic.Abstractions.csproj">
+      <Project>{1D05DB15-7576-439C-8B23-B06EE2E70F94}</Project>
       <Name>Plugin.XamJam.Pic.Abstractions</Name>
     </ProjectReference>
     <ProjectReference Include="..\Plugin.XamJam.Pic\Plugin.XamJam.Pic.csproj">
-      <Project>{A6FCEF44-D2BA-42C7-B3CB-13667BCD7B54}</Project>
+      <Project>{b973e0ac-1d06-44bf-8bb7-167536cd5d48}</Project>
       <Name>Plugin.XamJam.Pic</Name>
     </ProjectReference>
   </ItemGroup>
