Revert "XamJam.sln will temporarily die. Going to use an overall Client.sln for our code and use project references directly to speed up development. Once XamJam projects become more stable (only BugHound is stable for now) I'll release and reference them as nugets."
This reverts commit 2f5153a235589b9af2dd5e0d51702c2cf5b77abd.

Going back!

--- a/XamJam.Nav/XamJam.Nav.csproj
+++ b/XamJam.Nav/XamJam.Nav.csproj
@@ -89,7 +89,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Plugin.XamJam.Nav.nuspec">
+    <None Include="Plugin.XamJam.Util.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="README.md" />
