--- a/XamJam.Demo/XamJam.Demo.Droid/packages.config
+++ b/XamJam.Demo/XamJam.Demo.Droid/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MR.Gestures" version="1.3.5" targetFramework="monoandroid60" />
+  <package id="Softlion.XamSvg" version="2.3.1.4" targetFramework="monoandroid60" />
+  <package id="Vapolia.XamSvg.Forms" version="2.3.0.8" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
