--- a/XamJam.Demo/XamJam.Demo/XamJam.Demo.csproj
+++ b/XamJam.Demo/XamJam.Demo/XamJam.Demo.csproj
@@ -41,12 +41,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\DemoImageWallViewModel.cs" />
     <Compile Include="ViewModel\DemoImageSingleViewModel.cs" />
+    <Compile Include="ViewModel\DemoRatingsViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\DemoImageSingleView.xaml.cs">
       <DependentUpon>DemoImageSingleView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\DemoImageWallView.xaml.cs">
       <DependentUpon>DemoImageWallView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\DemoRatingsView.xaml.cs">
+      <DependentUpon>DemoRatingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
@@ -83,6 +87,14 @@
       <HintPath>$(SolutionDir)\packages\Xamarin.Forms.2.3.1.114\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="XamSvg.Shared, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Vapolia.XamSvg.Forms.2.3.0.8\lib\portable-win8+net45+wp8+wpa81+MonoAndroid44+Xamarin.iOS10\XamSvg.Shared.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="XamSvg.XamForms, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Vapolia.XamSvg.Forms.2.3.0.8\lib\portable-win8+net45+wp8+wpa81+MonoAndroid44+Xamarin.iOS10\XamSvg.XamForms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\DemoImageWallView.xaml">
@@ -110,6 +122,10 @@
       <Project>{829C860C-A35F-4CE6-A0AA-886EF62D0690}</Project>
       <Name>XamJam.Nav</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\XamJam.Ratings\XamJam.Ratings\XamJam.Ratings.csproj">
+      <Project>{5ffba81c-9e4b-4292-818e-a16f31965c4b}</Project>
+      <Name>XamJam.Ratings</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\XamJam.Wall\XamJam.Wall.csproj">
       <Project>{9B53316B-C991-41EC-A474-97F2B655F4F3}</Project>
       <Name>XamJam.Wall</Name>
@@ -123,6 +139,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\DemoImageSingleView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\DemoRatingsView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
