--- a/XamJam.Demo/XamJam.Demo/packages.config
+++ b/XamJam.Demo/XamJam.Demo/packages.config
@@ -3,5 +3,6 @@
   <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="MR.Gestures" version="1.3.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.51.3" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
+  <package id="Vapolia.XamSvg.Forms" version="2.3.0.8" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
